2010-07-07  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* README: Updated for OpenRISC
	* or32/_exit.c: Created.
	* or32/close.c: Created.
	* or32/close-uart.c: Created.
	* or32/configure: Regenerated.
	* or32/configure.in: Updated for new style AC_INIT.
	* or32/COPYING: Created.
	* or32/crt0.S: Rewritten to match updated linker. Calls init and
	sets up fini functions to handle constructors and destructors
	properly.
	* or32/environ.c: Created.
	* or32/exceptions.c: Deleted.
	* or32/execve.c: Created.
	* or32/fork.c: Created.
	* or32/fstat.c: Created.
	* or32/fstat-uart.c: Created.
	* or32/getpid.c: Created.
	* or32/io.c: Deleted.
	* or32/isatty.c: Created.
	* or32/isatty-uart.c: Created.
	* or32/kill.c: Created.
	* or32/link.c: Created.
	* or32/lseek.c: Created.
	* or32/lseek-uart.c: Created.
	* or32/Makefile.in: Updated for new source code.
	* or32/open.c: Created.
	* or32/or32.ld: Deleted.
	* or32/or1ksim-board.h: Renamed from board.h.
	* or32/proc.c: Created.
	* or32/read.c: Created.
	* or32/read-uart.c: Created.
	* or32/sbrk.c: Created.
	* or32/sim.cfg: Created.
	* or32/specs: Deleted.
	* or32/spr-defs.h: Renamed from spr_defs.h.
	* or32/stat.c: Created.
	* or32/times.c: Created.
	* or32/uart.c (_uart_init, _uart_putc, _uart_getc): Renamed from
	uart_init, uart_putc and uart_getc respectively. Macros simplified.
	* or32/uart-dummy.c: Created.
	* or32/uart.h <_uart_init, _uart_putc, _uart_getc>: Renamed
	external functions.
	* or32/unlink.c: Created.
	* or32/wait.c: Created.
	* or32/write.c: Created.
	* or32/write-uart.c: Created.

2008-12-17  Jon Beniston <jon@beniston.com>

	* README: Add description of lm32 directory.
	* configure.in: Add lm32 target.
	* configure: Regenerated.
	* libnosys/configure.in: Add lm32 target.
	* libnosys/configure: Regenerated.
	* lm32: New directory.
	* lm32/aclocal.m4: New file.
	* lm32/Makefile.in: New file.
	* lm32/configure.in: New file.
	* lm32/configure: New file.
	* lm32/crt0.S: New file.
	* lm32/isatty.c: New file.